[package]
name = "radixfs2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abao = "0.2.0"
anyhow = "1.0.69"
blake3 = "1.3.3"
bytes = "1.4.0"
postcard = { version = "1.0.4", features = ["alloc"] }
radixdb = "0.2.5"
unsigned-varint = "0.7.1"
